<resources>
    <string name="app_name">healthcare</string>
    <string name="_Fitness_Tracker">Fitness Tracker</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="Login">login</string>
    <string name="register_for_new_user">Register For New User</string>
    <string name="registration">Registration</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="hello">Hello ,</string>
    <string name="after_hello_text">Ho do you feel today?</string>
    <string name="workout">WORKOUT</string>
    <string name="liveworkout">LIVE WORKOUT</string>
    <string name="step_count">STEP COUNT</string>
    <string name="meal_plane">MEAL PLANNER</string>
    <string name="Analytics_Screen">Progress</string>
    <string name="log_out">LOG OUT</string>
    <string name="Name">Name</string>
    <string name="Gender">Gender</string>
    <string name="Age">Age</string>
    <string name="Height">Height</string>
    <string name="Weight">Weight</string>

</resources>