<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/main"
    android:layout_height="match_parent"
    android:background="@drawable/back2"
    android:padding="20dp">

  <TextView
      android:id="@+id/textView6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:text="@string/Weight"
      android:textColor="@android:color/white"
      app:layout_constraintBottom_toTopOf="@+id/editTextWeight"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.103"
      app:layout_constraintStart_toStartOf="parent" />

  <TextView
      android:id="@+id/textView7"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:text="@string/Height"
      android:textColor="@android:color/white"
      app:layout_constraintBottom_toTopOf="@+id/editTextHeight"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.103"
      app:layout_constraintStart_toStartOf="parent" />

  <ImageView
      android:id="@+id/backbtn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="64dp"
      android:layout_marginBottom="128dp"
      android:src="@drawable/back_btn"
      app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
      app:layout_constraintStart_toEndOf="@+id/profileImage" />

  <ImageView
      android:id="@+id/profileImage"
      android:layout_width="120dp"
      android:layout_height="120dp"
      android:layout_marginTop="32dp"
      android:clipToOutline="true"
      android:contentDescription="User Profile Picture"
      android:scaleType="centerCrop"
      android:src="@drawable/profile"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/nameText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:text="@string/Name"
      android:textColor="@android:color/black"
      android:textSize="24sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/profileImage" />


  <!-- RadioGroup for Gender Selection -->
  <EditText
      android:id="@+id/editTextEmail"
      android:layout_width="344dp"
      android:layout_height="57dp"
      android:layout_marginTop="20dp"
      android:autofillHints=""
      android:background="@drawable/input_bg"
      android:drawablePadding="10dp"
      android:ems="10"
      android:hint="@string/email"
      android:inputType="textEmailAddress"
      android:paddingStart="20dp"
      android:paddingTop="10dp"
      android:paddingEnd="10dp"
      android:paddingBottom="10dp"
      android:textColor="@color/colorWhite"
      android:textColorHint="@color/colorWhite"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.481"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/nameText" />

  <RadioGroup
      android:id="@+id/radioGroupGender"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginTop="20dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextEmail">

    <RadioButton
        android:id="@+id/radioMale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Male"
        android:textColor="@color/white"
        android:buttonTint="@drawable/custom_radio_button"
        android:layout_marginEnd="24dp" />

    <RadioButton
        android:id="@+id/radioFemale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Female"
        android:buttonTint="@drawable/custom_radio_button"
        android:textColor="@color/white" />
  </RadioGroup>


  <EditText
      android:id="@+id/editTextAge"
      android:layout_width="344dp"
      android:layout_height="57dp"
      android:layout_marginTop="28dp"
      android:autofillHints=""
      android:background="@drawable/input_bg"
      android:drawablePadding="10dp"
      android:ems="10"
      android:hint="@string/Age"
      android:inputType="textEmailAddress"
      android:paddingStart="20dp"
      android:paddingTop="10dp"
      android:paddingEnd="10dp"
      android:paddingBottom="10dp"
      android:textColor="@color/colorWhite"
      android:textColorHint="@color/colorWhite"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.481"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/radioGroupGender" />

  <EditText
      android:id="@+id/editTextWeight"
      android:layout_width="344dp"
      android:layout_height="57dp"
      android:layout_marginTop="28dp"
      android:autofillHints=""
      android:background="@drawable/input_bg"
      android:drawablePadding="10dp"
      android:ems="10"
      android:hint="Weight(Kg)"
      android:inputType="textEmailAddress"
      android:paddingStart="20dp"
      android:paddingTop="10dp"
      android:paddingEnd="10dp"
      android:paddingBottom="10dp"
      android:textColor="@color/colorWhite"
      android:textColorHint="@color/colorWhite"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.481"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextAge" />

  <EditText
      android:id="@+id/editTextHeight"
      android:layout_width="344dp"
      android:layout_height="57dp"
      android:layout_marginTop="28dp"
      android:autofillHints=""
      android:background="@drawable/input_bg"
      android:drawablePadding="10dp"
      android:ems="10"
      android:hint="Height(cm)"
      android:inputType="textEmailAddress"
      android:paddingStart="20dp"
      android:paddingTop="10dp"
      android:paddingEnd="10dp"
      android:paddingBottom="10dp"
      android:textColor="@color/colorWhite"
      android:textColorHint="@color/colorWhite"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.481"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextWeight" />

  <Button
      android:id="@+id/editProfileButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:backgroundTint="@android:color/holo_blue_dark"
      android:enabled="false"
      android:text="Edit Profile"
      android:textColor="@android:color/white"
      android:textSize="18sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.461"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextHeight"
      app:layout_constraintVertical_bias="1.0" />

  <TextView
      android:id="@+id/textView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:text="@string/email"
      android:textColor="@android:color/white"
      app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.101"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/nameText" />

  <TextView
      android:id="@+id/textView4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="12dp"
      android:text="@string/Gender"
      android:textColor="@android:color/white"
      app:layout_constraintBottom_toTopOf="@+id/textView5"
      app:layout_constraintEnd_toStartOf="@+id/radioGroupGender"
      app:layout_constraintHorizontal_bias="0.596"
      app:layout_constraintStart_toStartOf="parent" />

  <TextView
      android:id="@+id/textView5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:text="@string/Age"
      android:textColor="@android:color/white"
      app:layout_constraintBottom_toTopOf="@+id/editTextAge"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.098"
      app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
